# pyTermite

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .rstcheck.cfg  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  cliff.toml  codecov.yml  demo.py  dev-requirements.txt  pyproject.toml  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  lint.yml  tests.yml  trigger_release.yml
docs/source/: api_reference.rst  cli.rst  commands.rst  conf.py  connection.rst  developer_guide.rst  index.rst  quickstart.rst  utils.rst
src/pytermite/: __init__.py  commands.py  connection.py  pytermite.py  utils.py
tests/: __init__.py  conftest.py  test_commands.py  test_connection.py  test_utils.py
