[project]
name = "pytermite"
dynamic = ["version"]
description = "Control your GoPro swarm with ease using Python."
authors = [
    { name = "Lukas Behammer", email = "lukas.behammer@uni-a.de" },
]
readme = "README.md"
requires-python = ">=3.12"
keywords = [
    "GoPro",
    "USB control",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Private :: Do Not Upload", # !: Remove before publishing
]
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
dependencies = [
    "open-gopro",
    "requests",
    "aiohttp",
    "structlog",
    "rich",
    "click",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "ruff",
    "mypy",
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pytest-sugar",
    "pytest-random-order",
]

[project.urls]
#Repository
#Homepage
#Documentation
#Tracker
#Download

[project.scripts]
pytermite = "pytermite.pytermite:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


######################################################################
# Setuptools
[tool.setuptools.dynamic]
version = {attr = "pytermite.__version__"}


######################################################################
# Ruff
[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
preview = true
select = [
    "A",
    "ARG",
    "B",
    "C4",
    "C90",
    "CPY",
    "D",
    "E",
    "F",
    "I",
    "ICN",
    "N",
    "PT",
    "PTH",
    "RET",
    "W",
]
ignore = [
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "W191",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG002", "D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["src/pytermite"]


######################################################################
# Numpydoc
[tool.numpydoc_validation]
checks = [
    "all",   # report on all checks, except the below
    "EX01",
    "SA01",
    "ES01",
]
exclude = [  # don't report on objects that match any of these regex
    '\.__repr__$',
]
exclude_files = [ # don't process filepaths that match these regex
    '^tests/.*',
    '^docs/.*',
]


######################################################################
# MyPy
[tool.mypy]
exclude = [
    "build",
    "dist",
    "tests",
]
files = "src/pytermite"
strict = false
pretty = true
disable_error_code = ["import-not-found", "import-untyped"]
check_untyped_defs = true
follow_untyped_imports = true


######################################################################
# PyTest
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "--cov --cov-append --cov-report=term-missing --cov-report=xml --import-mode=importlib --random-order"
