[project]
name = "pytermite"
dynamic = ["version"]
description = "Control your GoPro swarm with ease using Python."
authors = [
    { name = "Lukas Behammer", email = "lukas.behammer@uni-a.de" },
]
readme = "README.md"
requires-python = ">=3.12"
keywords = [
    "GoPro",
    "USB control",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Private :: Do Not Upload", # !: Remove before publishing
]
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
dependencies = [
    "open-gopro",
    "requests",
    "aiohttp",
    "structlog",
    "rich",
    "click",
]

[project.urls]
#Repository
#Homepage
#Documentation
#Tracker
#Download

[project.scripts]
pytermite = "pytermite.pytermite:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov",
    "pytest-sugar",
    "pytest-random-order",
]
docs = [
    "sphinx",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "numpydoc",
    "pydata-sphinx-theme<0.16.1",
    "myst_parser",
]
typing = [
    "mypy",
    "types-requests",
]
lint = [
    "ruff",
    "numpydoc",
]
build =  [
    "build",
    "setuptools",
]
release = [
    {include-group = "build"},
    "twine",
]
tox = [
    "tox>=4.49.0",
    "tox-gh-actions",
]
dev = [
    {include-group = "test"},
    {include-group = "docs"},
    {include-group = "typing"},
    {include-group = "lint"},
    {include-group = "release"},
    {include-group = "tox"},
    "pre-commit"
]


######################################################################
# Setuptools
[tool.setuptools.dynamic]
version = {attr = "pytermite.__version__"}


######################################################################
# Ruff
[tool.ruff]
exclude = [
    "build",
    "dist",
    "docs",
    "demo.py",
]

[tool.ruff.lint]
preview = true
select = [
    "A",
    "ANN",
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "C90",
    "COM",
    "CPY",
    "D",
    "E",
    "F",
    "G",
    "I",
    "ICN",
    "INP",
    "N",
    "PERF",
    "PT",
    "PGH",
    "PTH",
    "Q",
    "RET",
    "RUF",
    "S",
    "SLF",
    "UP",
    "W",
]
ignore = [
    "ANN401",
    "COM812",
    "D206",
    "D300",
    "E111",
    "E114",
    "E117",
    "W191",
    "SLF001",
    "G004",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN",
    "ARG001",
    "ARG002",
    "ASYNC",
    "D",
    "RUF029",
    "S101"
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["src/pytermite"]


######################################################################
# Numpydoc
[tool.numpydoc_validation]
checks = [
    "all",   # report on all checks, except the below
    "EX01",
    "SA01",
    "ES01",
]
exclude = [  # don't report on objects that match any of these regex
    '\.__init__$',
    '\.__repr__$',
]
exclude_files = [ # don't process filepaths that match these regex
    '^tests/.*',
    '^docs/.*',
]


######################################################################
# MyPy
[tool.mypy]
exclude = [
    "build",
    "dist",
    "tests",
    "docs",
]
files = "src/pytermite"
strict = false
pretty = true
disable_error_code = ["import-not-found", "import-untyped"]
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
check_untyped_defs = true
follow_untyped_imports = true
warn_unreachable = true


######################################################################
# PyTest
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "-ra --cov --cov-branch --cov-append --cov-report=term-missing --cov-report=xml --import-mode=importlib --random-order --strict-config --strict-markers"
minversion = "9"
log_level = "INFO"
xfail_strict = true
filterwarnings = ["error"]
